Mon Apr  8 13:53:27 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* rcs.c (annotate_fileproc): If the file is not under CVS control,
	return instead of dumping a core. Don't bug on files with an empty
	first revision.

Fri Mar 29 16:08:28 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (annotate_fileproc): If last line of add-chunk is not
	newline terminated, end the loop when we find that out.

Fri Mar 29 16:59:34 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* rcs.c (annotate_fileproc): allow last line of add-chunk not to
	  be newline terminated

Thu Mar 28 10:56:36 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Add more diff tests:
	* sanity.sh (basic2): Use dotest for test 61.
	(basica): Add test basica-6.2.
	(branches): Add tests branches-14.4 and branches-14.5.
	(basic1): Remove tests 19, 20, 25, and 26.  The only thing this
	might miss out on is diff's interaction with added and removed
	files, but those tests didn't test that very well anyway.

	* rcs.c (RCS_getrevtime): Add comment regarding years after 1999.

	* rcs.c: Add "cvs annotate" command and related code.
	(getrcskey): Move special handling of RCSDESC from here to
	callers.  Handle those keys (desc, log, text) which do not
	end in a semicolon.
	* rcs.h (RCSVers): Add author field.
	* rcs.c (RCS_reparsercsfile): Set it.
	* cvs.h (annotate), main.c (cmd_usage, cmds), client.h client.c
	(client_annotate), server.c (serve_annotate, requests): Usual
	machinery to add a new command.
	* sanity.sh (basica): Test cvs annotate.

	* sanity.sh (branches): More tests, of things like adding files on
	the trunk after a branch has been made.

Tue Mar 26 09:48:49 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* expand_path.c: Don't declare free and xmalloc; cvs.h already
	takes care of that.

	* sanity.sh (mflag): Don't use tag name reserved to CVS.

	NT local changes plus miscellaneous things noticed in the process:
	* import.c (add_rcs_file): Use binary mode to write RCS file.  Use